    * 3717 Added search to EC settings and structured the options in multiple settings
    * 3720 The Event Console views are now supporting distributed setups...
    * 3736 New option for discontinuing counting on open event after configured time...
    * 3861 Introduced open event limit mechanism for protecting against message storms...
    * 3058 FIX: Event Console is now allowing non loadable MIB modules on startup...
    * 3097 FIX: mkeventd: fixed crash with non-descriptive error message if mibs couldn't be loaded
    * 3335 FIX: Improved error handling when requested rule pack does not exist
    * 3348 FIX: Improved error handling when trying to edit not existing rules/rule packs
    * 3350 FIX: Merged source of Event Console with Check_MK...
    * 3240 FIX: Fixed various quotation issues in GUI parts related to the EC
    * 3026 FIX: Event console: The "Add comment" option of a rule is now able to add the original text (\0)
    * 3566 FIX: Fixed exception on SNMP MIB management page when MIB directory is missing
    * 3568 FIX: Fixed broken link in "Access to event status via TCP" help text
    * 3589 FIX: Fixed processing of RFC 5424 syslog messages
    * 3771 FIX: Fixed exception on edit rule page in case of special URLs
    * 3745 FIX: MIB uploads: Handle latin-1 encoded MIBs
    * 3884 FIX: Notifications: Fixed wrong LASTSERVICESTATE and SERVICESTATE in EC notifications...

    Livestatus:
    * 3644 Fixed 'source' column in 'comments' table.
    * 3233 FIX: Fixed shutdown of Nagios core with Livestatus module...
    * 3235 FIX: Unbreak COMMAND handling...
    * 3646 FIX: Fixed Livestatus output formats...

    HW/SW-Inventory:
    * 3192 snmp_extended_info: now inventorizes all physical components of devices which support the ENTITY-MIB
    * 3319 HW/SW-Inventory service can now be OK in case of unreachable host...
    * 3322 esx_vsphere_hostsystem: inventory now adds information about memory, uuid and service tag...