@@ -685,6 +685,7 @@
     * 3720 The Event Console views are now supporting distributed setups...
     * 3736 New option for discontinuing counting on open event after configured time...
     * 3861 Introduced open event limit mechanism for protecting against message storms...
+    * 3887 Event contact groups are now handled in notifications (optionally)...
     * 3058 FIX: Event Console is now allowing non loadable MIB modules on startup...
     * 3097 FIX: mkeventd: fixed crash with non-descriptive error message if mibs couldn't be loaded
     * 3335 FIX: Improved error handling when requested rule pack does not exist
